css fixes; stuck footer to bottom

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -7,10 +7,15 @@
 @import "poemCards.css";
 @import "poem.css";
 
+html {
+  min-height: 100%;
+  position: relative;
+}
 body {
   font-family: "Rubik", sans-serif;
   font-weight: 600;
   font-style: italic;
+  margin: 0 0 100px;
 }
 
 @media only screen and (min-width: 0px) and (max-width: 600px) {
