--- a/src/assets/styles/poem.css
+++ b/src/assets/styles/poem.css
@@ -2,10 +2,20 @@
   margin-top: 3em;
   text-align: center;
 }
+
+@media only screen and (min-width: 0px) and (max-width: 600px) {
+  .poem-title {
+    margin-top: 0;
+  }
+
+  .poem-text {
+    margin: 2em 2em !important;
+  }
+}
 .poem-text {
   white-space: break-spaces;
   line-height: 1.5em;
-  margin: 2em 2em;
+  margin: 3em 3em;
   font-family: "Josefin Slab", serif;
   font-size: 14pt;
   font-weight: 500;
