--- a/src/assets/styles/poemCards.css
+++ b/src/assets/styles/poemCards.css
@@ -126,17 +126,8 @@
 }
 
 .poem-img-item:active > img {
-  -webkit-filter: opacity(0%);
+  -webkit-filter: opacity(10%);
   filter: opacity(10%);
-  border-radius: 50%;
-  transform: scale(0);
-  animation: ripple 500ms linear;
-}
-
-@keyframes ripple {
-  to {
-    transform: scale(5);
-  }
 }
 
 .poem-img-item.yellow {
